--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,16 @@ anyhow = "1"
 cfg-if = "1"
 console_error_panic_hook = "0.1"
 http = "0.2"
-leptos = { path = "../../../github/leptos/leptos" }
-leptos_integration_utils = { path = "../../../github/leptos/integrations/utils", optional = true }
-leptos_meta = { path = "../../../github/leptos/meta" }
-leptos_router = { path = "../../../github/leptos/router" }
-leptos-spin = { path = "../../../github/leptos-spin", optional = true }
+leptos = "0.5.6"
+leptos_integration_utils = { version = "0.5.6", optional = true }
+leptos_meta = "0.5.6"
+leptos_router = "0.5.6"
+leptos-spin = { git = "https://github.com/fermyon/leptos-spin", branch = "response-headers", optional = true }
+# leptos = { path = "../../../github/leptos/leptos" }
+# leptos_integration_utils = { path = "../../../github/leptos/integrations/utils", optional = true }
+# leptos_meta = { path = "../../../github/leptos/meta" }
+# leptos_router = { path = "../../../github/leptos/router" }
+# leptos-spin = { path = "../../../github/leptos-spin", optional = true }
 serde = "1.0.192"
 spin-sdk = { version = "2.1", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
